cambios agregamos amigas

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <p>
 
-hola estudiantes, esta es mi pagina web... chao
+hola amigas y amigos, esta es mi pagina web... chao
 
     </p>
 
